--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Reemplaza TODO tu archivo HTML con esto -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -124,37 +123,43 @@
     <div class="datetime-box" id="datetime"></div>
 
     <div class="section">
-      <label for="rut">RUT del conductor</label>
-      <input type="text" id="rut" placeholder="Ej: 12345678-9" />
+      <label for="rut-conductor">RUT del conductor:</label>
+      <input type="text" id="rut-conductor" onblur="buscarDatosConductor()" placeholder="Ej: 12345678-9" />
     </div>
 
     <div class="section">
-      <label for="nombre">Nombre del conductor</label>
-      <input type="text" id="nombre" placeholder="Nombre completo" />
+      <label>Nombre conductor:</label>
+      <div class="result-box" id="datos-conductor"></div>
+    </div>
+
+    <div class="section" id="manual-conductor-section" style="display:none;">
+      <label for="nombre-manual">Ingrese nombre manualmente:</label>
+      <input type="text" id="nombre-manual" placeholder="Nombre del conductor" />
     </div>
 
     <div class="section">
-      <label for="equipo">Número de equipo</label>
-      <input type="text" id="equipo" placeholder="Ej: 51125" />
+      <label for="numero-equipo">Número de equipo:</label>
+      <input type="text" id="numero-equipo" onblur="buscarDatosEquipo()" placeholder="Ej: 51125" />
     </div>
 
     <div class="section">
-      <label for="familia">Familia del equipo</label>
-      <input type="text" id="familia" placeholder="Ej: Tractor de equipaje" />
+      <label>Familia:</label>
+      <div class="result-box" id="familia-equipo"></div>
     </div>
 
     <div class="section">
-      <label for="habilitado">¿Habilitado para ingreso?</label>
-      <input type="text" id="habilitado" placeholder="Ej: Sí, habilitado" />
+      <label>¿Habilitado?</label>
+      <div class="result-box" id="status-equipo"></div>
+      <div class="alert-box" id="alerta-ingreso">⚠️ Equipo no habilitado para ingreso</div>
     </div>
 
     <div class="section">
-      <label for="obs">Observaciones</label>
-      <input type="text" id="obs" placeholder="Ej: Sin observaciones" />
+      <label>Observaciones:</label>
+      <div class="result-box" id="observaciones-equipo"></div>
     </div>
 
     <div class="section">
-      <label for="guardia">Guardia fiscalizador</label>
+      <label for="guardia">Guardia fiscalizador:</label>
       <input type="text" id="guardia" placeholder="Nombre del guardia" />
     </div>
 
@@ -162,38 +167,127 @@
   </div>
 
   <script>
+    const URL_GET = "https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec";
+
     function actualizarFechaHora() {
       const now = new Date();
       const opciones = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric',
-        hour: '2-digit', minute: '2-digit', second: '2-digit'
-      };
+        hour: '2-digit', minute: '2-digit', second: '2-digit' };
       document.getElementById("datetime").innerText = now.toLocaleDateString('es-CL', opciones);
     }
     actualizarFechaHora();
 
-    async function enviarFormulario() {
-      const formData = new FormData();
-      formData.append("entry.675531615", document.getElementById("rut").value.trim());
-      formData.append("entry.851525222", document.getElementById("nombre").value.trim());
-      formData.append("entry.1413809422", document.getElementById("equipo").value.trim());
-      formData.append("entry.783685052", document.getElementById("familia").value.trim());
-      formData.append("entry.10343893", document.getElementById("habilitado").value.trim());
-      formData.append("entry.2133373249", document.getElementById("obs").value.trim());
-      formData.append("entry.234162856", document.getElementById("guardia").value.trim());
+    async function buscarDatosConductor() {
+      const rut = document.getElementById("rut-conductor").value.trim();
+      const contenedor = document.getElementById("datos-conductor");
+      const manualSection = document.getElementById("manual-conductor-section");
+
+      if (!rut) {
+        contenedor.innerText = "";
+        manualSection.style.display = "none";
+        return;
+      }
+
+      contenedor.innerText = "Buscando...";
 
       try {
-        await fetch("https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse", {
-          method: "POST",
-          mode: "no-cors",
-          body: formData
-        });
+        const response = await fetch(URL_GET + "?tipo=personal&id=" + encodeURIComponent(rut));
+        const data = await response.json();
 
-        alert("✅ Enviado correctamente.");
-        location.reload();
-      } catch (error) {
-        alert("❌ Error al enviar el formulario.");
-        console.error(error);
+        if (data.error) {
+          contenedor.innerText = "❌ No encontrado.";
+          manualSection.style.display = "block";
+        } else {
+          contenedor.innerText = data.NOMBRE || "(sin nombre)";
+          manualSection.style.display = "none";
+        }
+      } catch {
+        contenedor.innerText = "❌ Error al buscar.";
+        manualSection.style.display = "block";
       }
+    }
+
+    async function buscarDatosEquipo() {
+      const id = document.getElementById("numero-equipo").value.trim();
+      const familiaBox = document.getElementById("familia-equipo");
+      const statusBox = document.getElementById("status-equipo");
+      const obsBox = document.getElementById("observaciones-equipo");
+      const alerta = document.getElementById("alerta-ingreso");
+
+      if (!id) {
+        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "";
+        alerta.style.display = "none";
+        return;
+      }
+
+      familiaBox.innerText = statusBox.innerText = obsBox.innerText = "Buscando...";
+      alerta.style.display = "none";
+
+      try {
+        const response = await fetch(URL_GET + "?tipo=equipo&id=" + encodeURIComponent(id));
+        const data = await response.json();
+
+        if (data.error) {
+          familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ No encontrado";
+        } else {
+          familiaBox.innerText = data.FAMILIA || "";
+          obsBox.innerText = data.OBSERVACIONES || "";
+          const status = (data["STATUS ✎"] || "").toLowerCase();
+          if (status === "operativo") {
+            statusBox.innerText = "❌ No habilitado";
+            alerta.style.display = "block";
+          } else {
+            statusBox.innerText = "✅ Habilitado";
+            alerta.style.display = "none";
+          }
+        }
+      } catch {
+        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ Error";
+        alerta.style.display = "none";
+      }
+    }
+
+    function enviarFormulario() {
+      const rut = document.getElementById("rut-conductor").value.trim();
+      const nombreManual = document.getElementById("nombre-manual").value.trim();
+      const nombre = document.getElementById("datos-conductor").innerText.includes("No encontrado") ? nombreManual : document.getElementById("datos-conductor").innerText.trim();
+      const equipo = document.getElementById("numero-equipo").value.trim();
+      const familia = document.getElementById("familia-equipo").innerText.trim();
+      const habilitado = document.getElementById("status-equipo").innerText.trim();
+      const observaciones = document.getElementById("observaciones-equipo").innerText.trim();
+      const guardia = document.getElementById("guardia").value.trim();
+
+      if (!rut || !nombre || !equipo || !guardia) {
+        alert("⚠️ Completa todos los campos obligatorios.");
+        return;
+      }
+
+      const form = document.createElement("form");
+      form.action = "https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse";
+      form.method = "POST";
+      form.target = "_self";
+
+      const campos = {
+        "entry.675531615": rut,
+        "entry.851525222": nombre,
+        "entry.1413809422": equipo,
+        "entry.783685052": familia,
+        "entry.10343893": habilitado,
+        "entry.2133373249": observaciones,
+        "entry.234162856": guardia
+      };
+
+      for (let name in campos) {
+        const input = document.createElement("input");
+        input.type = "hidden";
+        input.name = name;
+        input.value = campos[name];
+        form.appendChild(input);
+      }
+
+      document.body.appendChild(form);
+      form.submit();
+      alert("✅ Enviado correctamente.");
     }
   </script>
 </body>
