--- a/index.html
+++ b/index.html
@@ -85,24 +85,20 @@
       border-radius: 6px;
     }
     .alert-box {
+      display: none;
+      border-radius: 6px;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 10px;
+      padding: 10px;
+    }
+    .alert-red {
       background-color: #a30000;
       color: #fff;
-      padding: 12px;
-      border-radius: 6px;
-      font-weight: bold;
-      text-align: center;
-      display: none;
-      margin-top: 10px;
     }
-    .info-box {
-      background-color: #ffd600;
+    .alert-yellow {
+      background-color: #ffc107;
       color: #000;
-      padding: 10px;
-      border-radius: 6px;
-      font-weight: bold;
-      text-align: center;
-      display: none;
-      margin-top: 10px;
     }
     .btn {
       background-color: #c62828;
@@ -132,55 +128,49 @@
 
     <div class="datetime-box" id="datetime"></div>
 
-    <form action="https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse" method="POST" target="_self" onsubmit="return validarFormulario();">
-      <div class="section">
-        <label for="rut">RUT del conductor:</label>
-        <input type="text" name="entry.675531615" id="rut" placeholder="123456789-1" onblur="buscarDatosConductor()" required>
-      </div>
+    <div class="section">
+      <label for="rut-conductor">RUT del conductor:</label>
+      <input type="text" id="rut-conductor" onblur="buscarDatosConductor()" placeholder="Ej: 12345678-9" />
+    </div>
 
-      <div class="section">
-        <label>Nombre del conductor:</label>
-        <div class="result-box" id="datos-conductor"></div>
-        <input type="hidden" name="entry.851525222" id="nombre-conductor">
-      </div>
+    <div class="section">
+      <label>Nombre conductor:</label>
+      <div class="result-box" id="datos-conductor"></div>
+    </div>
 
-      <div class="section" id="manual-conductor-section" style="display:none;">
-        <label for="nombre-manual">Ingrese manualmente nombre del conductor:</label>
-        <input type="text" id="nombre-manual" placeholder="Nombre completo del conductor">
-      </div>
+    <div class="section" id="manual-conductor-section" style="display:none;">
+      <label for="nombre-manual">Ingrese nombre manualmente:</label>
+      <input type="text" id="nombre-manual" placeholder="Nombre del conductor" />
+    </div>
 
-      <div class="section">
-        <label for="equipo">Número de equipo:</label>
-        <input type="text" name="entry.1413809422" id="equipo" onblur="buscarDatosEquipo()" required>
-      </div>
+    <div class="section">
+      <label for="numero-equipo">Número de equipo:</label>
+      <input type="text" id="numero-equipo" onblur="buscarDatosEquipo()" placeholder="Ej: 51125" />
+    </div>
 
-      <div class="section">
-        <label>Familia del equipo:</label>
-        <div class="result-box" id="familia-equipo"></div>
-        <input type="hidden" name="entry.783685052" id="input-familia">
-      </div>
+    <div class="section">
+      <label>Familia:</label>
+      <div class="result-box" id="familia-equipo"></div>
+    </div>
 
-      <div class="section">
-        <label>¿Habilitado para ingreso?</label>
-        <div class="result-box" id="status-equipo"></div>
-        <div class="alert-box" id="alerta-roja">⚠️ Equipo no habilitado para ingreso, contacte a Control Flota Tel: 56 9 3860 1767</div>
-        <div class="info-box" id="alerta-amarilla">⚠️ OJO: este equipo solo estaría habilitado a ingreso si va a cargar combustible o batería.</div>
-        <input type="hidden" name="entry.10343893" id="input-status">
-      </div>
+    <div class="section">
+      <label>¿Habilitado?</label>
+      <div class="result-box" id="status-equipo"></div>
+      <div class="alert-box alert-red" id="alerta-ingreso">⚠️ Equipo no habilitado para ingreso, contacte a Control Flota Tel: 56 9 3860 1767</div>
+      <div class="alert-box alert-yellow" id="alerta-carga">⚠️ OJO: este equipo solo estaría habilitado a ingreso si va a cargar combustible o batería.</div>
+    </div>
 
-      <div class="section">
-        <label>Observaciones:</label>
-        <div class="result-box" id="observaciones-equipo"></div>
-        <input type="hidden" name="entry.2133373249" id="input-obs">
-      </div>
+    <div class="section">
+      <label>Observaciones:</label>
+      <div class="result-box" id="observaciones-equipo"></div>
+    </div>
 
-      <div class="section">
-        <label for="guardia">Guardia quien fiscaliza:</label>
-        <input type="text" name="entry.234162856" id="guardia" required>
-      </div>
+    <div class="section">
+      <label for="guardia">Guardia fiscalizador:</label>
+      <input type="text" id="guardia" placeholder="Nombre del guardia" />
+    </div>
 
-      <button type="submit" class="btn">Enviar</button>
-    </form>
+    <button class="btn" onclick="enviarFormulario()">Enviar</button>
   </div>
 
   <script>
@@ -188,96 +178,130 @@
 
     function actualizarFechaHora() {
       const now = new Date();
-      const opciones = {
-        weekday: 'long', year: 'numeric', month: 'long', day: 'numeric',
-        hour: '2-digit', minute: '2-digit', second: '2-digit'
-      };
+      const opciones = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric',
+        hour: '2-digit', minute: '2-digit', second: '2-digit' };
       document.getElementById("datetime").innerText = now.toLocaleDateString('es-CL', opciones);
     }
     actualizarFechaHora();
 
     async function buscarDatosConductor() {
-      const rut = document.getElementById("rut").value.trim();
+      const rut = document.getElementById("rut-conductor").value.trim();
       const contenedor = document.getElementById("datos-conductor");
-      const manual = document.getElementById("manual-conductor-section");
+      const manualSection = document.getElementById("manual-conductor-section");
 
-      if (!rut) return;
+      if (!rut) {
+        contenedor.innerText = "";
+        manualSection.style.display = "none";
+        return;
+      }
 
       contenedor.innerText = "Buscando...";
+
       try {
-        const response = await fetch(`${URL_GET}?tipo=personal&id=${encodeURIComponent(rut)}`);
+        const response = await fetch(URL_GET + "?tipo=personal&id=" + encodeURIComponent(rut));
         const data = await response.json();
+
         if (data.error) {
           contenedor.innerText = "❌ No encontrado.";
-          manual.style.display = "block";
+          manualSection.style.display = "block";
         } else {
           contenedor.innerText = data.NOMBRE || "(sin nombre)";
-          document.getElementById("nombre-conductor").value = data.NOMBRE || "";
-          manual.style.display = "none";
+          manualSection.style.display = "none";
         }
-      } catch (e) {
-        contenedor.innerText = "❌ Error";
-        manual.style.display = "block";
+      } catch {
+        contenedor.innerText = "❌ Error al buscar.";
+        manualSection.style.display = "block";
       }
     }
 
     async function buscarDatosEquipo() {
-      const id = document.getElementById("equipo").value.trim();
-      const familia = document.getElementById("familia-equipo");
-      const status = document.getElementById("status-equipo");
-      const obs = document.getElementById("observaciones-equipo");
-      const alertaRoja = document.getElementById("alerta-roja");
-      const alertaAmarilla = document.getElementById("alerta-amarilla");
+      const id = document.getElementById("numero-equipo").value.trim();
+      const familiaBox = document.getElementById("familia-equipo");
+      const statusBox = document.getElementById("status-equipo");
+      const obsBox = document.getElementById("observaciones-equipo");
+      const alerta = document.getElementById("alerta-ingreso");
+      const alertaCarga = document.getElementById("alerta-carga");
 
-      if (!id) return;
+      if (!id) {
+        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "";
+        alerta.style.display = "none";
+        alertaCarga.style.display = "none";
+        return;
+      }
 
-      familia.innerText = status.innerText = obs.innerText = "Buscando...";
-      alertaRoja.style.display = "none";
-      alertaAmarilla.style.display = "none";
+      familiaBox.innerText = statusBox.innerText = obsBox.innerText = "Buscando...";
+      alerta.style.display = "none";
+      alertaCarga.style.display = "none";
 
       try {
-        const response = await fetch(`${URL_GET}?tipo=equipo&id=${encodeURIComponent(id)}`);
+        const response = await fetch(URL_GET + "?tipo=equipo&id=" + encodeURIComponent(id));
         const data = await response.json();
 
         if (data.error) {
-          familia.innerText = status.innerText = obs.innerText = "❌ No encontrado";
+          familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ No encontrado";
         } else {
-          familia.innerText = data.FAMILIA || "(sin familia)";
-          document.getElementById("input-familia").value = data.FAMILIA || "";
+          familiaBox.innerText = data.FAMILIA || "";
+          obsBox.innerText = data.OBSERVACIONES || "";
+          const status = (data["STATUS ✎"] || "").toLowerCase();
 
-          obs.innerText = data.OBSERVACIONES || "(sin observaciones)";
-          document.getElementById("input-obs").value = data.OBSERVACIONES || "";
-
-          const estado = (data["STATUS ✎"] || "").toLowerCase();
-          if (estado === "operativo") {
-            status.innerText = "❌ No habilitado";
-            document.getElementById("input-status").value = "No habilitado";
-            alertaRoja.style.display = "block";
-          } else if (estado.includes("solo carga")) {
-            status.innerText = "⚠️ Solo carga";
-            document.getElementById("input-status").value = "Solo carga";
-            alertaAmarilla.style.display = "block";
+          if (status === "operativo") {
+            statusBox.innerText = "❌ No habilitado";
+            alerta.style.display = "block";
+          } else if (status === "solo combustible o batería") {
+            statusBox.innerText = "⚠️ Habilitado condicional";
+            alertaCarga.style.display = "block";
           } else {
-            status.innerText = "✅ Sí habilitado";
-            document.getElementById("input-status").value = "Si, habilitado";
+            statusBox.innerText = "✅ Habilitado";
           }
         }
-      } catch (e) {
-        familia.innerText = status.innerText = obs.innerText = "❌ Error al obtener datos";
+      } catch {
+        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ Error";
+        alerta.style.display = "none";
+        alertaCarga.style.display = "none";
       }
     }
 
-    function validarFormulario() {
-      const nombre = document.getElementById("nombre-conductor").value.trim();
-      if (!nombre) {
-        const manual = document.getElementById("nombre-manual").value.trim();
-        if (!manual) {
-          alert("⚠️ Ingresa el nombre del conductor.");
-          return false;
-        }
-        document.getElementById("nombre-conductor").value = manual;
+    function enviarFormulario() {
+      const rut = document.getElementById("rut-conductor").value.trim();
+      const nombreManual = document.getElementById("nombre-manual").value.trim();
+      const nombre = document.getElementById("datos-conductor").innerText.includes("No encontrado") ? nombreManual : document.getElementById("datos-conductor").innerText.trim();
+      const equipo = document.getElementById("numero-equipo").value.trim();
+      const familia = document.getElementById("familia-equipo").innerText.trim();
+      const habilitado = document.getElementById("status-equipo").innerText.trim();
+      const observaciones = document.getElementById("observaciones-equipo").innerText.trim();
+      const guardia = document.getElementById("guardia").value.trim();
+
+      if (!rut || !nombre || !equipo || !guardia) {
+        alert("⚠️ Completa todos los campos obligatorios.");
+        return;
       }
-      return true;
+
+      const form = document.createElement("form");
+      form.action = "https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse";
+      form.method = "POST";
+      form.target = "_self";
+
+      const campos = {
+        "entry.675531615": rut,
+        "entry.851525222": nombre,
+        "entry.1413809422": equipo,
+        "entry.783685052": familia,
+        "entry.10343893": habilitado,
+        "entry.2133373249": observaciones,
+        "entry.234162856": guardia
+      };
+
+      for (let name in campos) {
+        const input = document.createElement("input");
+        input.type = "hidden";
+        input.name = name;
+        input.value = campos[name];
+        form.appendChild(input);
+      }
+
+      document.body.appendChild(form);
+      form.submit();
+      alert("✅ Enviado correctamente.");
     }
   </script>
 </body>
