--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     <div class="section">
       <label>¿Habilitado?</label>
       <div class="result-box" id="status-equipo"></div>
-      <div class="alert-box alert-red" id="alerta-ingreso">⚠️ Equipo no habilitado para ingreso, contacte a Control Flota Tel: 56 9 3860 1767</div>
-      <div class="alert-box alert-yellow" id="alerta-carga-extra">⚠️ Ojo: Este equipo estaría habilitado solo a ingresar a Cargar combustible o Carga eléctrica.</div>
+      <div class="alert-box alert-red" id="alerta-ingreso"> ❌ Equipo no habilitado para ingreso, contacte a       Control Flota 📞 Tel: 56 9 3860 1767</div>
+      <div class="alert-box alert-yellow" id="alerta-carga-extra"> ⚠️ Ojo: Este equipo estaría habilitado solo a ingresar a Cargar combustible o Carga eléctrica.</div>
     </div>
 
     <div class="section">
