--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       padding: 30px 15px;
       margin: 0;
     }
+
     .container {
       background-color: #333;
       padding: 30px;
@@ -24,11 +25,13 @@
       width: 100%;
       border: 1px solid #555;
     }
+
     .logo-wrapper {
       display: flex;
       justify-content: center;
       margin-bottom: 20px;
     }
+
     .logo {
       max-width: 140px;
       padding: 8px;
@@ -38,21 +41,25 @@
       box-shadow: 0 0 6px rgba(255, 255, 255, 0.05);
       transition: transform 0.3s ease;
     }
+
     .logo:hover {
       transform: scale(1.03);
     }
+
     h1 {
       font-size: 24px;
       color: #fff;
       text-align: center;
       margin-bottom: 25px;
     }
+
     label {
       display: block;
       margin-top: 16px;
       font-weight: bold;
       color: #ddd;
     }
+
     input, textarea {
       width: 100%;
       padding: 10px;
@@ -62,7 +69,15 @@
       font-size: 14px;
       background-color: #1e1e1e;
       color: #fff;
+      transition: border-color 0.3s, box-shadow 0.3s;
     }
+
+    input:focus, textarea:focus {
+      border-color: #c62828;
+      box-shadow: 0 0 6px rgba(198, 40, 40, 0.5);
+      outline: none;
+    }
+
     .datetime-box {
       background-color: #444;
       border: 1px solid #666;
@@ -73,9 +88,11 @@
       font-weight: bold;
       color: #f0f0f0;
     }
+
     .section {
       margin-bottom: 25px;
     }
+
     .result-box {
       min-height: 40px;
       border: 1px dashed #666;
@@ -83,7 +100,9 @@
       background-color: #1a1a1a;
       color: #eee;
       border-radius: 6px;
+      transition: all 0.3s ease-in-out;
     }
+
     .alert-box {
       display: none;
       border-radius: 6px;
@@ -91,24 +110,34 @@
       text-align: center;
       margin-top: 10px;
       padding: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
+
     .alert-red {
       background-color: #a30000;
       color: #fff;
+      white-space: pre-line;
     }
+
     .alert-yellow {
-      background-color: #ffc107;
-      color: #000;
+      background-color: #fff3cd;
+      color: #856404;
+      border: 1px solid #ffeeba;
+      position: relative;
+      transition: all 0.3s ease;
     }
+
     .emoji-alert {
       display: inline-block;
       background-color: #ffc107;
-      border: 2px solid #000;
+      border: 1px solid #000;
       border-radius: 50%;
       padding: 2px 6px;
       font-weight: bold;
-      margin-right: 5px;
+      margin-right: 6px;
+      font-size: 13px;
     }
+
     .btn {
       background-color: #c62828;
       color: #fff;
@@ -117,14 +146,17 @@
       border-radius: 8px;
       cursor: pointer;
       font-size: 16px;
-      transition: all 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.2s ease;
       width: 100%;
       margin-top: 20px;
     }
+
     .btn:hover {
       background-color: #b71c1c;
-      transform: scale(1.02);
+      transform: scale(1.03);
+      box-shadow: 0 0 12px rgba(255, 0, 0, 0.25);
     }
+
     .spinner {
       display: inline-block;
       width: 16px;
@@ -136,6 +168,7 @@
       vertical-align: middle;
       margin-right: 8px;
     }
+
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
@@ -180,10 +213,11 @@
       <label>¿Habilitado?</label>
       <div class="result-box" id="status-equipo"></div>
       <div class="alert-box alert-red" id="alerta-ingreso">
-        ❌ Equipo no habilitado para ingreso,<br>contacte a Control Flota 📞 Tel: 56 9 3860 1767
+        ❌ Equipo no habilitado para ingreso, 
+        contacte a Control Flota 📞 Tel: 56 9 3860 1767
       </div>
       <div class="alert-box alert-yellow" id="alerta-carga-extra">
-        <span class="emoji-alert">⚠️</span>Ojo: Este equipo estaría habilitado solo a ingresar a Cargar combustible o Carga eléctrica.
+        <span class="emoji-alert">⚠️</span>Ojo: Este equipo estaría habilitado solo a ingresar a cargar combustible o carga eléctrica.
       </div>
     </div>
 
