--- a/index.html
+++ b/index.html
@@ -212,9 +212,8 @@
     <div class="section">
       <label>¿Habilitado?</label>
       <div class="result-box" id="status-equipo"></div>
-      <div class="alert-box alert-red" id="alerta-ingreso">
-        ❌ Equipo no habilitado para ingreso, 
-        contacte a Control Flota 📞 Tel: 56 9 3860 1767
+      <div class="alert-box alert-red" id="alerta-ingreso"> ❌ Equipo no habilitado para ingreso, 
+           contacte a Control Flota 📞 Tel: 56 9 3860 1767.
       </div>
       <div class="alert-box alert-yellow" id="alerta-carga-extra">
         <span class="emoji-alert">⚠️</span>Ojo: Este equipo estaría habilitado solo a ingresar a cargar combustible o carga eléctrica.
