--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     .container {
       background-color: #333;
-      padding: 30px;
+      padding: 25px;
       border-radius: 18px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
-      max-width: 600px;
+      max-width: 500px;
       width: 100%;
       border: 1px solid #555;
     }
@@ -33,8 +33,8 @@
     }
 
     .logo {
-      max-width: 140px;
-      padding: 8px;
+      max-width: 120px;
+      padding: 6px;
       background-color: rgba(0, 0, 0, 0.3);
       border: 1px solid rgba(255, 255, 255, 0.12);
       border-radius: 6px;
@@ -47,26 +47,27 @@
     }
 
     h1 {
-      font-size: 24px;
+      font-size: 22px;
       color: #fff;
       text-align: center;
-      margin-bottom: 25px;
+      margin-bottom: 20px;
     }
 
     label {
       display: block;
-      margin-top: 16px;
+      margin-top: 14px;
       font-weight: bold;
       color: #ddd;
+      font-size: 14px;
     }
 
     input, textarea {
       width: 100%;
-      padding: 10px;
-      margin-top: 6px;
+      padding: 8px;
+      margin-top: 5px;
       border-radius: 6px;
       border: 1px solid #666;
-      font-size: 14px;
+      font-size: 13px;
       background-color: #1e1e1e;
       color: #fff;
       transition: border-color 0.3s, box-shadow 0.3s;
@@ -74,32 +75,34 @@
 
     input:focus, textarea:focus {
       border-color: #c62828;
-      box-shadow: 0 0 6px rgba(198, 40, 40, 0.5);
+      box-shadow: 0 0 5px rgba(198, 40, 40, 0.5);
       outline: none;
     }
 
     .datetime-box {
       background-color: #444;
       border: 1px solid #666;
-      padding: 12px;
+      padding: 10px;
       text-align: center;
       border-radius: 8px;
-      margin-bottom: 20px;
+      margin-bottom: 18px;
       font-weight: bold;
       color: #f0f0f0;
+      font-size: 14px;
     }
 
     .section {
-      margin-bottom: 25px;
+      margin-bottom: 20px;
     }
 
     .result-box {
-      min-height: 40px;
+      min-height: 36px;
       border: 1px dashed #666;
-      padding: 10px;
+      padding: 8px;
       background-color: #1a1a1a;
       color: #eee;
       border-radius: 6px;
+      font-size: 13px;
       transition: all 0.3s ease-in-out;
     }
 
@@ -111,6 +114,7 @@
       margin-top: 10px;
       padding: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      font-size: 13px;
     }
 
     .alert-red {
@@ -132,23 +136,23 @@
       background-color: #ffc107;
       border: 1px solid #000;
       border-radius: 50%;
-      padding: 2px 6px;
+      padding: 2px 5px;
       font-weight: bold;
-      margin-right: 6px;
-      font-size: 13px;
+      margin-right: 5px;
+      font-size: 12px;
     }
 
     .btn {
       background-color: #c62828;
       color: #fff;
       border: none;
-      padding: 12px 20px;
+      padding: 10px 18px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 15px;
       transition: background-color 0.3s ease, transform 0.2s ease;
       width: 100%;
-      margin-top: 20px;
+      margin-top: 18px;
     }
 
     .btn:hover {
@@ -159,14 +163,14 @@
 
     .spinner {
       display: inline-block;
-      width: 16px;
-      height: 16px;
-      border: 2px solid rgba(255, 255, 255, 0.3);
-      border-top-color: #fff;
+      width: 15px;
+      height: 15px;
+      border: 2px solid rgba(198, 40, 40, 0.3);
+      border-top-color: #c62828;
       border-radius: 50%;
       animation: spin 1s linear infinite;
       vertical-align: middle;
-      margin-right: 8px;
+      margin-right: 6px;
     }
 
     @keyframes spin {
