--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
       font-size: 14px;
     }
 
-    input, textarea {
+    .section > * {
+      max-width: 100%;
+    }
+
+    input, textarea, .result-box {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
@@ -71,6 +75,7 @@
       background-color: #1e1e1e;
       color: #fff;
       transition: border-color 0.3s, box-shadow 0.3s;
+      box-sizing: border-box;
     }
 
     input:focus, textarea:focus {
@@ -93,17 +98,6 @@
 
     .section {
       margin-bottom: 20px;
-    }
-
-    .result-box {
-      min-height: 36px;
-      border: 1px dashed #666;
-      padding: 8px;
-      background-color: #1a1a1a;
-      color: #eee;
-      border-radius: 6px;
-      font-size: 13px;
-      transition: all 0.3s ease-in-out;
     }
 
     .alert-box {
