--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
     input, textarea, .result-box {
       width: 100%;
-      padding: 8px;
+      padding: 12px 10px; /* Altura mayor */
       margin-top: 5px;
       border-radius: 6px;
       border: 1px solid #666;
-      font-size: 13px;
+      font-size: 14px;
       background-color: #1e1e1e;
       color: #fff;
       transition: border-color 0.3s, box-shadow 0.3s;
@@ -140,7 +140,7 @@
       background-color: #c62828;
       color: #fff;
       border: none;
-      padding: 10px 18px;
+      padding: 12px 20px;
       border-radius: 8px;
       cursor: pointer;
       font-size: 15px;
